# aoc

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-aoc  bazel-bin  bazel-out  bazel-testlogs  main.go
2023/: BUILD.bazel  go.mod
2023/cmd/: BUILD.bazel  main.go
2023/days/: day01.go  day02.go  day05.go  day05_test.go  day06.go
2023/internal/: BUILD.bazel  day01.go  day01_test.go  day02.go  day02_test.go  day04.go  day04_test.go  day05.go  day05_test.go  day06.go  day07.go  day08.go
2023/pkg/: BUILD.bazel  read.go
2023/tests/: BUILD.bazel  day01_test.go  day02_test.go  day04_test.go  day05_test.go
2025/: go.mod
2025/cmd/: main.go
2025/internal/: day01.go  day02.go  day03.go  day04.go
2025/pkg/: read.go
aoc2023/: README.md  go.mod  main.go
aoc2023/days/: BUILD.bazel  day02_test.go  day04.go  day04_test.go  day07.go
aoc2023/utils/: BUILD.bazel
days/: day01.go  day01_test.go  day03.go  day05.go  day06.go  day07.go  day08.go
utils/: read.go
