load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/jdiamond95/aoc/2023/cmd",
    visibility = ["//visibility:private"],
    deps = ["//2023/internal"],
)

go_binary(
    name = "aoc2023",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
    data = glob(["inputs/*"]),
)
