load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = glob(["day*.go"])
    importpath = "github.com/jdiamond95/aoc/2023/internal",
    visibility = ["//2023:__subpackages__"],
    deps = ["//2023/pkg"],
)

go_test(
    name = "internal_test",
    srcs = [
        "day01_test.go",
        "day02_test.go",
        "day04_test.go",
        "day05_test.go",
    ],
    data = glob(["inputs/*"]),
)
